--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+spring.datasource.url = jdbc:postgresql://localhost:5432/ninjasGC
+spring.datasource.username = postgres
+spring.datasource.password = JAVA17
 
+spring.jpa.open-in-view=false
+
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
